--- a/Biblio.bib
+++ b/Biblio.bib
@@ -414,7 +414,7 @@ doi = {10.1016/j.commatsci.2007.02.010}
 }
 
 @article{Nairn_2006,
-author = {GUO, Y. and Nairn, John},
+author = {Guo, Y. and Nairn, John},
 year = {2006},
 month = {12},
 pages = {},
@@ -501,8 +501,8 @@ journal = {Engineering Fracture Mechanics},
 doi = {10.1016/S0013-7944(02)00066-8}
 }
 
-@article{Schreyer_2002
-author = {Schreyer, H.L. and Sulsky, D.L. and Zhou, S.-J},
+@article{Schreyer_2002,
+author = {Schreyer, H.L. and Sulsky, D.L. and Zhou, S.J},
 year = {2002},
 month = {03},
 pages = {2483-2507},
